Exit with EXIT_FAILURE for invalid arguments. PR 43517.